--- a/main.html
+++ b/main.html
@@ -42,16 +42,50 @@
       display: block;
       margin: 0 auto;
     }
+
+    #popup {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      background-color: #2e2e2e;
+      border-color: #4a4a4a;
+      border-style: solid;
+      padding: 2rem;
+      color: white;
+      font-size: large;
+      transform: translate(-50%, -100%);
+      border-radius: 0.4rem;
+    }
+
+    #popup-cover{
+      position: fixed;
+      background-color: #1111118f;
+      width: 100%;
+      height: 100%;
+    }
+
+
   </style>
+
 </head>
+
 <body>
   <div class="navbar">
     <h1>X si O</h1>
   </div>
 
+  <div id="popup-cover" style="display: none;">
+    <div id="popup">
+      <p id="popup-text">This is a pop-up window</p>
+      <button onclick="restart()">Close</button>
+    </div>
+  </div>
+
   <div id="game-wrapper">
     <div id="game-container"></div>
   </div>
+
+
 
 <script src='http://127.0.0.1:5500/main.js'></script>
 </body>
