--- a/main.html
+++ b/main.html
@@ -34,11 +34,13 @@
     }
 
     #game-container {
+      background-color: #444444;
       width: 600px;
       height: 600px;
     }
 
     canvas {
+      background-color: #444444;
       display: block;
       margin: 0 auto;
     }
