--- a/main.html
+++ b/main.html
@@ -5,76 +5,9 @@
   <title>X and Zero</title>
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/phaser@3.55.2/dist/phaser.min.js"></script>
-
-  <style>
-    html, body {
-      font-family: 'Orbitron', sans-serif;
-      margin: 0;
-      padding: 0;
-      height: 100%;
-      background-color: #111;
-    }
-
-    .navbar {
-      position: absolute;
-      top: 0;
-      width: 100%;
-      text-align: center;
-      background-color: #1d1d1d;
-      color: #f5f5f5;
-      padding: 10px 0;
-      z-index: 10;
-    }
-
-    #game-wrapper {
-      height: 100vh;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
-
-    #game-container {
-      background-color: #444444;
-      width: 600px;
-      height: 600px;
-    }
-
-    canvas {
-      background-color: #444444;
-      display: block;
-      margin: 0 auto;
-    }
-
-    #popup {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      background-color: #2e2e2e;
-      border-color: #4a4a4a;
-      border-style: solid;
-      padding: 2rem;
-      color: white;
-      font-size: large;
-      transform: translate(-50%, -100%);
-      border-radius: 0.4rem;
-    }
-
-    #popup-cover{
-      position: fixed;
-      background-color: #1111118f;
-      width: 100%;
-      height: 100%;
-    }
-
-
-  </style>
-
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
 </head>
-
-<body>
-  <div class="navbar">
-    <h1>X si O</h1>
-  </div>
 
   <div id="popup-cover" style="display: none;">
     <div id="popup">
@@ -86,8 +19,6 @@
   <div id="game-wrapper">
     <div id="game-container"></div>
   </div>
-
-
 
 <script src='http://127.0.0.1:5500/main.js'></script>
 </body>
