--- a/main.html
+++ b/main.html
@@ -9,6 +9,10 @@
   <link rel="stylesheet" href="style.css">
 </head>
 
+  <div id="title">
+    <h1>TIC TAC TOE</h1>
+  </div>
+
   <div id="popup-cover" style="display: none;">
     <div id="popup">
       <p id="popup-text">This is a pop-up window</p>
