spagetti code, refactoring of style css, min max algorithm base. menu pagge, file sys refactoring.

--- a/main.html
+++ b/main.html
@@ -6,7 +6,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/phaser@3.55.2/dist/phaser.min.js"></script>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/resources/css/style.css">
 </head>
 
   <div class="title">
@@ -14,9 +14,9 @@
   </div>
 
   <div id="popup-cover" style="display: none;">
-    <div id="popup">
+    <div id="popup" class="card">
       <p id="popup-text">This is a pop-up window</p>
-      <button onclick="restart()">Close</button>
+      <button onclick="restart()" class="boton-elegante">Close</button>
     </div>
   </div>
 
@@ -24,6 +24,6 @@
     <div id="game-container"></div>
   </div>
 
-<script src='http://127.0.0.1:5500/main.js'></script>
+<script src='http://127.0.0.1:5500/resources/js/main.js'></script>
 </body>
 </html>
