--- a/menu.html
+++ b/menu.html
@@ -1,26 +1,128 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>X and Zero</title>
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
+  <meta charset="UTF-8">
+  <title>X and Zero - Setup</title>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="/resources/css/style.css">
+  <style>
+    html, body {
+      font-family: 'Montserrat', sans-serif;
+      margin: 0;
+      padding: 0;
+      height: 100%;
+      background-color: #0f1425;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: #ffffff;
+    }
+
+    .form-container {
+      color: rgba(0,0,0,0.3);
+      background-color: #ffffff;
+      padding: 2rem;
+      border-radius: 0.5rem;
+      box-shadow: 0 8px 16px rgba(0,0,0,0.3);
+      width: 350px;
+      text-align: center;
+    }
+
+    h1 {
+      margin-bottom: 1.5rem;
+      font-size: 2rem;
+    }
+
+    form {
+      display: flex;
+      flex-direction: column;
+      gap: 1.5rem;
+    }
+
+    fieldset {
+      border: none;
+      padding: 0;
+      margin: 0;
+    }
+
+    legend {
+      font-size: 1.2rem;
+      margin-bottom: 0.5rem;
+      color: #cccccc;
+    }
+
+    label {
+      display: block;
+      text-align: left;
+      margin-bottom: 0.5rem;
+      font-size: 1rem;
+    }
+
+    input[type="radio"] {
+      margin-right: 0.5rem;
+    }
+
+    .submit-btn {
+      padding: 0.75rem;
+      border: none;
+      background-color: #2f74c0;
+      color: #ffffff;
+      font-size: 1.1rem;
+      border-radius: 0.5rem;
+      cursor: pointer;
+      transition: background-color 0.3s;
+    }
+
+    .submit-btn:hover {
+      background-color: #1e5da0;
+    }
+  </style>
 </head>
 <body>
-
-  <div class="title">
-    <h1>TIC TAC TOE</h1>
+  <div class="form-container">
+    <h1>X and Zero</h1>
+    <form id="game-form">
+      <fieldset>
+        <legend>Game Mode</legend>
+        <label>
+          <input type="radio" name="mode" value="pvp" required>
+          Player vs Player
+        </label>
+        <label>
+          <input type="radio" name="mode" value="pvc">
+          Player vs AI
+        </label>
+      </fieldset>
+      <fieldset>
+        <legend>Select Your Symbol</legend>
+        <label>
+          <input type="radio" name="symbol" value="X" required>
+          X
+        </label>
+        <label>
+          <input type="radio" name="symbol" value="O">
+          O
+        </label>
+      </fieldset>
+      <button type="submit" class="submit-btn">Start Game</button>
+    </form>
   </div>
+  
+  <script>
+    document.getElementById('game-form').addEventListener('submit', function(e) {
+      e.preventDefault();
+      const mode = document.querySelector('input[name="mode"]:checked').value;
+      const symbol = document.querySelector('input[name="symbol"]:checked').value;
 
-  <div class="card-container">
-    <div class="card">
-      <p class="card-text">Player Vs Player</p>
-    </div>
-    <div class="card">
-      <p class="card-text">Player Vs AI</p>
-    </div>
-  </div>
+      // In a no-nonsense approach, we simply log the chosen options.
+      console.log("Game Mode:", mode, "Symbol:", symbol);
+      
+      // For now, just display a basic alert.
+      alert("Starting game: " + (mode === "pvp" ? "Player vs Player" : "Player vs AI") + " with symbol '" + symbol + "'");
+      // Integration with the game logic should be implemented here.
+    });
+  </script>
+
+
 
 </body>
 </html>
