Added page redirecting if not logged in

--- a/menu.html
+++ b/menu.html
@@ -121,7 +121,7 @@
       // Integration with the game logic should be implemented here.
     });
   </script>
-
+  <script src="/resources/js/context.js"></script>
 
 
 </body>
