--- a/auth.html
+++ b/auth.html
@@ -120,5 +120,6 @@
            </div> 
           </div> 
     <script src="/resources/js/auth.js "></script>
+    <script src="/resources/js/context.js"></script>
 </body>
 </html>
