--- a/main.html
+++ b/main.html
@@ -25,5 +25,6 @@
   </div>
 
 <script src='http://127.0.0.1:5500/resources/js/main.js'></script>
+<script src="/resources/js/context.js"></script>
 </body>
 </html>
