--- a/main.html
+++ b/main.html
@@ -6,7 +6,10 @@
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/phaser@3.55.2/dist/phaser.min.js"></script>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="/resources/css/ORIGIN.css">
   <link rel="stylesheet" href="/resources/css/style.css">
+  <!-- <link rel="stylesheet" href="/resources/css/elementsStyle.css"> -->
+  <!-- <link rel="stylesheet" href="/resources/css/elementsGroupsStyle.css"> -->
 </head>
 
   <div class="title">
