--- a/auth.html
+++ b/auth.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TIC TAC TOE</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/resources/css/ORIGIN.css">
+    <link rel="stylesheet" href="/resources/css/origin.css">
     <link rel="stylesheet" href="/resources/css/auth.css">
     <link rel="stylesheet" href="/resources/css/elementsStyle.css">
     <link rel="stylesheet" href="/resources/css/elementsGroupsStyle.css">
