--- a/main.html
+++ b/main.html
@@ -6,7 +6,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/phaser@3.55.2/dist/phaser.min.js"></script>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="/resources/css/ORIGIN.css">
+  <link rel="stylesheet" href="/resources/css/origin.css">
   <link rel="stylesheet" href="/resources/css/style.css">
   <!-- <link rel="stylesheet" href="/resources/css/elementsStyle.css"> -->
   <!-- <link rel="stylesheet" href="/resources/css/elementsGroupsStyle.css"> -->
@@ -28,6 +28,7 @@
   </div>
 
 <script src='http://127.0.0.1:5500/resources/js/main.js'></script>
+<script src='http://127.0.0.1:5500/resources/js/minmax.js'></script>
 <script src="/resources/js/context.js"></script>
 </body>
 </html>
