--- a/main.html
+++ b/main.html
@@ -8,9 +8,14 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/resources/css/origin.css">
   <link rel="stylesheet" href="/resources/css/style.css">
-  <!-- <link rel="stylesheet" href="/resources/css/elementsStyle.css"> -->
-  <!-- <link rel="stylesheet" href="/resources/css/elementsGroupsStyle.css"> -->
+  <link rel="stylesheet" href="/resources/css/elementsStyle.css">
+  <link rel="stylesheet" href="/resources/css/elementsGroupsStyle.css">
+
 </head>
+<nav class="simple-navbar">
+  <a href="http://localhost:5500/menu.html"><button id="main-btn" class="btn btn-primary">Menu</button></a>
+</nav>
+
 
   <div class="title">
     <h1>TIC TAC TOE</h1>
@@ -30,5 +35,9 @@
 <script src='http://127.0.0.1:5500/resources/js/main.js'></script>
 <script src='http://127.0.0.1:5500/resources/js/minmax.js'></script>
 <script src="/resources/js/context.js"></script>
+<footer class="site-footer">
+  <p>&copy; 2025 All Rights Reserved. All content is copyrighted.</p>
+</footer>
 </body>
+
 </html>
