--- a/auth.html
+++ b/auth.html
@@ -13,6 +13,9 @@
     </style>
 </head>
 <body>
+    <nav class="simple-navbar">
+        <a href="http://localhost:5500/menu.html"><button id="main-btn" class="btn btn-primary">Menu</button></a>
+      </nav>
     <div class="center-div">
         <div class="form-container">
             <div class="main-tabs">
@@ -122,7 +125,12 @@
             </div>
            </div> 
           </div> 
+          <footer class="site-footer">
+            <p>&copy; 2025 All Rights Reserved. All content is copyrighted.</p>
+          </footer>
+        </div>  
     <script src="/resources/js/auth.js "></script>
     <script src="/resources/js/context.js"></script>
+
 </body>
 </html>
