--- a/auth.html
+++ b/auth.html
@@ -1,136 +1,146 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TIC TAC TOE</title>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/resources/css/origin.css">
-    <link rel="stylesheet" href="/resources/css/auth.css">
-    <link rel="stylesheet" href="/resources/css/elementsStyle.css">
-    <link rel="stylesheet" href="/resources/css/elementsGroupsStyle.css">
-    <style>
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>TIC TAC TOE</title>
+
+  <!-- Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
+
+  <!-- Styles -->
+  <link rel="stylesheet" href="/resources/css/origin.css">
+  <link rel="stylesheet" href="/resources/css/auth.css">
+  <link rel="stylesheet" href="/resources/css/elementsStyle.css">
+  <link rel="stylesheet" href="/resources/css/elementsGroupsStyle.css">
 </head>
 <body>
+  <div class="wrapper">
+    <!-- Navbar -->
     <nav class="simple-navbar">
-        <a href="http://localhost:5500/menu.html"><button id="main-btn" class="btn btn-primary">Menu</button></a>
-      </nav>
-    <div class="center-div">
+      <a href="http://localhost:5500/menu.html">
+        <button id="main-btn" class="btn btn-primary">Menu</button>
+      </a>
+    </nav>
+
+    <!-- Main Content -->
+    <div class="content">
+      <div class="center-div">
         <div class="form-container">
-            <div class="main-tabs">
-                <div class="main-tab active" data-tab="login">Login</div>
-                <div class="main-tab" data-tab="register">Register</div>
+          <!-- Tabs -->
+          <div class="main-tabs">
+            <div class="main-tab active" data-tab="login">Login</div>
+            <div class="main-tab" data-tab="register">Register</div>
+          </div>
+
+          <!-- Login -->
+          <div id="loginTab" class="tab-content active">
+            <h2>Welcome Back</h2>
+            <div id="loginMessage" class="message-box"></div>
+            <form id="loginForm" novalidate>
+              <div class="form-group">
+                <label for="loginEmail">Email Address</label>
+                <input type="email" id="loginEmail" placeholder="you@example.com" required>
+                <span id="loginEmailHint" class="form-hint"></span>
+              </div>
+              <div class="form-group">
+                <label for="loginPassword">Password</label>
+                <input type="password" id="loginPassword" placeholder="Enter your password" required>
+                <span id="loginPasswordHint" class="form-hint"></span>
+              </div>
+              <button type="submit" class="btn btn-primary">Login</button>
+            </form>
+          </div>
+
+          <!-- Register -->
+          <div id="registerTab" class="tab-content">
+            <div class="register-tabs">
+              <div class="register-tab active" data-step="1">Personal Info</div>
+              <div class="register-tab" data-step="2">Security</div>
+              <div class="register-tab" data-step="3">Confirmation</div>
             </div>
 
-            <div id="loginTab" class="tab-content active">
-                <h2>Welcome Back</h2>
-                <div id="loginMessage" class="message-box"></div>
-
-                <form id="loginForm" novalidate> <div class="form-group">
-                        <label for="loginEmail">Email Address</label>
-                        <input type="email" id="loginEmail" placeholder="you@example.com" required>
-                        <span id="loginEmailHint" class="form-hint"></span>
-                    </div>
-
-                    <div class="form-group">
-                        <label for="loginPassword">Password</label>
-                        <input type="password" id="loginPassword" placeholder="Enter your password" required>
-                        <span id="loginPasswordHint" class="form-hint"></span>
-                    </div>
-
-                    <!-- <div style="text-align: right; margin-bottom: 20px;">
-                        <a href="#" style="color: #2f74c0; text-decoration: none; font-size: 0.85rem; font-weight: 600;">Forgot password?</a>
-                    </div> -->
-
-                    <button type="submit" class="btn btn-primary">Login</button>
-                </form>
+            <div class="step-indicator">
+              <div class="step active" data-step-indicator="1">1</div>
+              <div class="step-connector line-1-2"></div>
+              <div class="step" data-step-indicator="2">2</div>
+              <div class="step-connector line-2-3"></div>
+              <div class="step" data-step-indicator="3">3</div>
             </div>
 
-            <div id="registerTab" class="tab-content">
-                <div class="register-tabs">
-                    <div class="register-tab active" data-step="1">Personal Info</div>
-                    <div class="register-tab" data-step="2">Security</div>
-                    <div class="register-tab" data-step="3">Confirmation</div>
+            <div id="registerMessage" class="message-box"></div>
+
+            <!-- Step 1 -->
+            <div id="step1" class="tab-content active">
+              <h2>Create Your Account</h2>
+              <form id="step1Form" novalidate>
+                <div class="form-group">
+                  <label for="fullName">Full Name</label>
+                  <input type="text" id="fullName" placeholder="Enter your full name" required minlength="3">
+                  <span id="nameHint" class="form-hint"></span>
                 </div>
-
-                <div class="step-indicator">
-                    <div class="step active" data-step-indicator="1">1</div>
-                    <div class="step-connector line-1-2"></div>
-                    <div class="step" data-step-indicator="2">2</div>
-                    <div class="step-connector line-2-3"></div>
-                    <div class="step" data-step-indicator="3">3</div>
+                <div class="form-group">
+                  <label for="regEmail">Email Address</label>
+                  <input type="email" id="regEmail" placeholder="you@example.com" required>
+                  <span id="emailHint" class="form-hint"></span>
                 </div>
-
-                <div id="registerMessage" class="message-box"></div>
-
-                <div id="step1" class="tab-content active">
-                    <h2>Create Your Account</h2>
-                    <form id="step1Form" novalidate>
-                        <div class="form-group">
-                            <label for="fullName">Full Name</label>
-                            <input type="text" id="fullName" placeholder="Enter your full name" required minlength="3">
-                            <span id="nameHint" class="form-hint"></span>
-                        </div>
-
-                        <div class="form-group">
-                            <label for="regEmail">Email Address</label>
-                            <input type="email" id="regEmail" placeholder="you@example.com" required>
-                            <span id="emailHint" class="form-hint"></span>
-                        </div>
-
-                        <div class="form-group">
-                            <label for="phoneNumber">Phone Number</label>
-                            <input type="tel" id="phoneNumber" placeholder="e.g., +1 123 456 7890" required>
-                            <span id="phoneHint" class="form-hint"></span>
-                        </div>
-
-                        <button type="button" id="nextToStep2" class="btn btn-primary">Continue</button>
-                    </form>
+                <div class="form-group">
+                  <label for="phoneNumber">Phone Number</label>
+                  <input type="tel" id="phoneNumber" placeholder="e.g., +1 123 456 7890" required>
+                  <span id="phoneHint" class="form-hint"></span>
                 </div>
-
-                <div id="step2" class="tab-content">
-                    <h2>Set Your Password</h2>
-                     <form id="step2Form" novalidate>
-                        <div class="form-group">
-                            <label for="regPassword">Password</label>
-                            <input type="password" id="regPassword" placeholder="Create a strong password" required>
-                            <div class="password-strength">
-                                <div id="strengthMeter" class="strength-meter"></div>
-                            </div>
-                            <span id="passwordHint" class="form-hint">Min. 8 chars: upper, lower, number, symbol (!@#$%^&*)</span>
-                        </div>
-
-                        <div class="form-group">
-                            <label for="confirmPassword">Confirm Password</label>
-                            <input type="password" id="confirmPassword" placeholder="Confirm your password" required>
-                            <span id="confirmHint" class="form-hint"></span>
-                        </div>
-
-                        <div class="btn-group">
-                            <button type="button" id="backToStep1" class="btn btn-secondary">Back</button>
-                            <button type="button" id="submitRegistration" class="btn btn-primary">Register Account</button>
-                        </div>
-                    </form>
-                </div>
-
-                <div id="step3" class="tab-content">
-                    <div class="success-content">
-                         <div class="checkmark"></div>
-                        <h2>Registration Successful!</h2>
-                        <p style="text-align: center; margin-bottom: 25px; color: #495057; font-size: 1rem;">Your account has been created. You can now log in.</p>
-                        <button type="button" id="goToLogin" class="btn btn-success">Go to Login</button>
-                    </div>
-                </div>
+                <button type="button" id="nextToStep2" class="btn btn-primary">Continue</button>
+              </form>
             </div>
-           </div> 
-          </div> 
-          <footer class="site-footer">
-            <p>&copy; 2025 All Rights Reserved. All content is copyrighted.</p>
-          </footer>
-        </div>  
-    <script src="/resources/js/auth.js "></script>
-    <script src="/resources/js/context.js"></script>
 
+            <!-- Step 2 -->
+            <div id="step2" class="tab-content">
+              <h2>Set Your Password</h2>
+              <form id="step2Form" novalidate>
+                <div class="form-group">
+                  <label for="regPassword">Password</label>
+                  <input type="password" id="regPassword" placeholder="Create a strong password" required>
+                  <div class="password-strength">
+                    <div id="strengthMeter" class="strength-meter"></div>
+                  </div>
+                  <span id="passwordHint" class="form-hint">Min. 8 chars: upper, lower, number, symbol (!@#$%^&*)</span>
+                </div>
+                <div class="form-group">
+                  <label for="confirmPassword">Confirm Password</label>
+                  <input type="password" id="confirmPassword" placeholder="Confirm your password" required>
+                  <span id="confirmHint" class="form-hint"></span>
+                </div>
+                <div class="btn-group">
+                  <button type="button" id="backToStep1" class="btn btn-secondary">Back</button>
+                  <button type="button" id="submitRegistration" class="btn btn-primary">Register Account</button>
+                </div>
+              </form>
+            </div>
+
+            <!-- Step 3 -->
+            <div id="step3" class="tab-content">
+              <div class="success-content">
+                <div class="checkmark"></div>
+                <h2>Registration Successful!</h2>
+                <p style="text-align: center; margin-bottom: 25px; color: #495057; font-size: 1rem;">
+                  Your account has been created. You can now log in.
+                </p>
+                <button type="button" id="goToLogin" class="btn btn-success">Go to Login</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Footer -->
+    <footer class="site-footer">
+      <p>&copy; 2025 All Rights Reserved. All content is copyrighted.</p>
+    </footer>
+  </div>
+
+  <!-- Scripts -->
+  <script src="/resources/js/auth.js"></script>
+  <script src="/resources/js/context.js"></script>
 </body>
 </html>
