--- a/menu.html
+++ b/menu.html
@@ -5,13 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>TIC TAC TOE</title>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
-  <!-- <link rel="stylesheet" href="/resources/css/auth.css"> -->
   <link rel="stylesheet" href="/resources/css/origin.css">
   <link rel="stylesheet" href="/resources/css/elementsStyle.css">
   <link rel="stylesheet" href="/resources/css/elementsGroupsStyle.css">
-  <style>
-    /* Any additional in-file styles if needed */
-  </style>
 </head>
 <body>
   <div class="wrapper">
@@ -29,41 +25,34 @@
             <div id="loginMessage" class="message-box"></div>
             <form id="MenuForm" novalidate>
               <div class="form-group">
-                <div class="form-group">
-                  <label for="gameMode">Choose Symbol</label>
-                  <div class="switch-wrapper" style="display: flex;">
-                    <button type="button" id="btnOn1" class="btn btn-primary" onclick="CreateSwitch('btnOn1','btnOn1', 'btnOff1', 'toggleState1')">X</button>
-                    <button type="button" id="btnOff1" class="btn" onclick="CreateSwitch('btnOff1','btnOn1', 'btnOff1', 'toggleState1')">O</button>
-                  </div>
-                  <input type="hidden" name="PlayAsXorO" id="toggleState1" value="on">
-                  <span id="loginPasswordHint" class="form-hint"></span>
+                <label for="gameMode">Choose Symbol</label>
+                <div class="switch-wrapper">
+                  <button type="button" id="btnOn1" class="btn btn-primary" onclick="CreateSwitch('btnOn1','btnOn1', 'btnOff1', 'toggleState1')">X</button>
+                  <button type="button" id="btnOff1" class="btn" onclick="CreateSwitch('btnOff1','btnOn1', 'btnOff1', 'toggleState1')">O</button>
                 </div>
-                <div class="form-group">
-                  <label for="gameMode">Select Opponent</label>
-                  <div class="switch-wrapper" style="display: flex;">
-                    <button type="button" id="btnOn" class="btn btn-primary" onclick="CreateSwitch('btnOn','btnOn', 'btnOff', 'toggleState')">Player</button>
-                    <button type="button" id="btnOff" class="btn" onclick="CreateSwitch('btnOff','btnOn', 'btnOff', 'toggleState')">Robot</button>
-                  </div>
-                  <input type="hidden" name="PlayAgainstPlayerOr" id="toggleState" value="on">
-                  <span id="loginPasswordHint" class="form-hint"></span>
-                </div>
-                <style>
-                  .switch-wrapper {
-                    display: flex;
-                  }
-                </style>
-                <button type="submit" class="btn btn-primary">PLAY</button>
+                <input type="hidden" name="PlayAsXorO" id="toggleState1" value="on">
               </div>
+
+              <div class="form-group">
+                <label for="gameMode">Select Opponent</label>
+                <div class="switch-wrapper">
+                  <button type="button" id="btnOn" class="btn btn-primary" onclick="CreateSwitch('btnOn','btnOn', 'btnOff', 'toggleState')">Player</button>
+                  <button type="button" id="btnOff" class="btn" onclick="CreateSwitch('btnOff','btnOn', 'btnOff', 'toggleState')">Robot</button>
+                </div>
+                <input type="hidden" name="PlayAgainstPlayerOr" id="toggleState" value="on">
+              </div>
+
+              <button type="submit" class="btn btn-primary">PLAY</button>
             </form>
           </div>
         </div>
       </div>
     </div>
-    
+
     <footer class="site-footer">
       <p>&copy; 2025 All Rights Reserved. All content is copyrighted.</p>
     </footer>
-  </div>  
+  </div>
 
   <script>
     function saveFormToCookie(event) {
@@ -81,6 +70,11 @@
       console.log("GameSettings Cookie set to:", formDataJSON);
       window.location.href = "http://localhost:5500/main.html";
     }
+
+    function deleteCookie(name) {
+      document.cookie = name + '=; Max-Age=0; path=/';
+    }
+
     document.getElementById('MenuForm').addEventListener('submit', saveFormToCookie);
   </script>
   <script src="/resources/js/context.js"></script>
