--- a/main.html
+++ b/main.html
@@ -19,8 +19,9 @@
 
     <nav class="simple-navbar">
       <a href="http://localhost:5500/menu.html">
-        <button id="main-btn" class="btn btn-primary">Menu</button>
+        <button id="main-btn" class=" btn-navbar btn btn-primary">Menu</button>
       </a>
+      <button id="logout-btn" class="btn-navbar btn btn-secondary " onclick="logout()">Log out</button>
     </nav>
 
     <div class="title">
