--- a/menu.html
+++ b/menu.html
@@ -13,8 +13,9 @@
   <div class="wrapper">
     <nav class="simple-navbar">
       <a href="http://localhost:5500/menu.html">
-        <button id="main-btn" class="btn btn-primary">Menu</button>
+        <button id="main-btn" class=" btn-navbar btn btn-primary">Menu</button>
       </a>
+      <button id="logout-btn" class="btn-navbar btn btn-secondary " onclick="logout()">Log out</button>
     </nav>
 
     <div class="content">
