--- a/main.html
+++ b/main.html
@@ -36,10 +36,25 @@
     </div>
 
     <div class="content">
+      <div class="sidepanel"><h1 id="score-o">O</h1></div>
       <div id="game-wrapper">
         <div id="game-container"></div>
       </div>
+      <div class="sidepanel"><h1 id="score-x">X</h1></div>
     </div>
+    <style>
+      .sidepanel{
+        width: 4rem;
+        min-width: fit-content;
+        padding: 2rem;
+        color: white;
+        align-items: start;
+        justify-content: start;
+        display: flex;
+        white-space: nowarp;
+        height: 500px;
+      }
+    </style>
 
     <footer class="site-footer">
       <p>&copy; 2025 All Rights Reserved. All content is copyrighted.</p>
