better winning logic, better ai, 5x5 mode

--- a/main.html
+++ b/main.html
@@ -47,8 +47,8 @@
           <li>X&nbsp;•&nbsp;<span id="score-x">0</span></li>
         </ul>
     
-        <p class="turn-indicator">Turn&nbsp;<span id="turn-value">O</span></p>
-        <button class="btn-restart" onclick="restart()">Restart</button>
+        <!-- <p class="turn-indicator">Turn&nbsp;<span id="turn-value">O</span></p> -->
+        <!-- <button class="btn-restart" onclick="restart()">Restart</button> -->
       </aside>
     </div>
     
@@ -58,8 +58,8 @@
     </footer>
   </div>
 
-  <script src="http://127.0.0.1:5500/resources/js/main.js"></script>
+  <script src="http://127.0.0.1:5500/resources/js/context.js"></script>
   <script src="http://127.0.0.1:5500/resources/js/minmax.js"></script>
-  <script src="/resources/js/context.js"></script>
+  <script src="http://127.0.0.1:5500/resources/js/main.js"></script>
 </body>
 </html>
