--- a/auth.html
+++ b/auth.html
@@ -113,7 +113,9 @@
 
             <div id="step3" class="tab-content">
               <div class="success-content">
-                <div class="checkmark"></div>
+                <div class="checkmark-wrap">
+                  <div class="checkmark"></div>
+              </div>
                 <h2>Registration Successful!</h2>
                 <p style="text-align: center; margin-bottom: 25px; color: #495057; font-size: 1rem;">
                   Your account has been created. You can now log in.
